# SuperPowered

./: .env.vault  .gitignore  README.md  pyproject.toml
SuperPowered/: db.sqlite3  manage.py
SuperPowered/API/: admin.py  models.py  schema.py  serializers.py  tests.py  urls.py  views.py
SuperPowered/API/SuperPowered/: settings.py
SuperPowered/API/migrations/: 0001_initial.py  0002_alter_hero_weight.py  0002_publisher.py  0003_alter_hero_weight.py  0003_hero_height.py  0004_alter_hero_unique_together.py  0005_alter_hero_name.py  0006_alter_hero_height_alter_hero_weight.py  0007_superpower.py  0008_alter_hero_alignment.py  0009_alter_hero_race.py  0010_alter_hero_unique_together.py  0011_alter_hero_unique_together.py  0012_superhero.py  0013_hero_publisher.py  0014_delete_superhero.py
SuperPowered/SuperPowered/: asgi.py  settings.py  settings_prod.py  urls.py  wsgi.py
